fixed dark mode errors

--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ a {
     padding: 5vw;
     border-radius: 1vw;
     margin-bottom: 6vw;
-    margin-top 4vw;
+    margin-top: 4vw;
     margin-right: 5vw;
     margin-left: 5vw; 
 }
